--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bookshelf": "^1.2.0",
     "date-and-time": "^0.14.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "faker": "^5.1.0",
     "jquery": "^3.5.1",
+    "knex": "^2.5.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "nodemon": "^2.0.4",
+    "orm": "^8.0.0",
+    "sequelize": "^6.32.1",
     "uuid": "^8.3.0"
   }
 }
